implement base logic
